--- a/perber/views/themes/default/layout.jade
+++ b/perber/views/themes/default/layout.jade
@@ -27,10 +27,12 @@ html(class="no-js", lang="en")
         //link(href='http://fonts.googleapis.com/css?family=Nova+Script|Monoton|Baumans|Roboto:300,100,100italic,300italic,400,400italic,500,500italic,700,700italic,900,900italic|Raleway:400,200,900,800,700,600,500,300,100',rel='stylesheet',type='text/css')
         // link(rel="stylesheet", href="/css/style.css")
 
-        script(type="text/javascript",src="/js/libs/jquery-1.10.2.min.js")
+        script(type="text/javascript",src="/js/libs/jquery-2.0.3.min.js")
         script(type="text/javascript",src="/js/libs/modernizr-2.5.3.min.js")
+        script(type="text/javascript",src="/js/libs/jquery.timeago.js")
         script(type="text/javascript",src="/js/libs/retina.js")
 
     - var body_class = (("undefined" != typeof room) ? 'fancy-theme' : 'home-page')
     body(class=body_class)
         block content
+
