--- a/perber/public/css/perber.css
+++ b/perber/public/css/perber.css
@@ -209,6 +209,8 @@ a:hover {
     z-index: 1;
 }
 
+
+
 /*******************************
              Pages
 *******************************/
@@ -231,25 +233,74 @@ body{
     -webkit-font-smoothing: subpixel-antialiased;
 }
 .wrap{
-    max-width: 600px;
+    /*max-width: 600px;*/
     margin: 0 auto;
     text-align: left;
-    padding-top: 20px;
+    overflow: hidden;
+}
+
+
+/*===========*/
+
+.chat-list{
+    position: fixed;
+    width: 100%;
+    top: 80px;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    overflow: auto;
+    box-sizing:border-box;
+}
+.chat{
+    /**/
+}
+.loading{
+    width: 310px; 
+    padding:20px 0;
+    margin: 0 auto;
+    text-align: center;
+    position: absolute;
+    width: 100%;
+    top: 40px;
+}
+.loading i{
+    font-size: 24px;
+    color: #fff;
+}
+
+.ui.header.nullbox{
+    display: block;
+    width: 310px; 
+    padding:20px 0;
+    margin: 0 auto;
+    text-align: center;
+    color: rgba(255, 255, 255, 0.4);
+}
+.ui.header.nullbox i.icon{
+    font-size: 50px!important;
+    color: rgba(255, 255, 255, 0.4);
+    font-family: 'Icons';
+    -webkit-box-shadow: 0 0 0 5px rgba(255, 255, 255, .4) inset;
+    box-shadow: 0 0 0 5px rgba(255, 255, 255, .4) inset;
 }
 
 .chat-box{
     display: inline-block;
-    min-width: 100px;
-    max-width: 290px;
+    min-width: 150px;
+    max-width: 310px;
+    width: 300px;
     background: #fff;
     border-radius: 5px;
     padding: 20px 30px;
-    margin: 5px;
+    margin: 5px 5px 5px 10px;
     vertical-align: top;
     font-size: 24px;
     font-weight: 100;
     line-height: 1.48;
     color: #514f47;
+    word-wrap: break-word;
+    word-break: normal;
     box-sizing:border-box;
 }
 
@@ -260,15 +311,90 @@ body{
     font-size: 10px;
 }
 
+
+.chat .history .chat-box{
+    /*opacity: 0;*/
+}
+
+
+
+
+/*===========*/
+
 .chat-input{
-    padding: 40px 0;
+    position: fixed;
+    width: 100%;
+    top: 0;
+    left: 0;
+    background: #fff;
+}
+
+.chat-input .ui.form .field{
+    margin: 0 10px;
 }
 .chat-input .ui.form textarea{
+    height: 80px;
+    max-height: 80px;
+    min-height: 80px;
+    padding: .85em 0.5em;
     resize:none;
     border-radius: 5px;
     border: none;
     box-shadow: none;
     background: rgba(255,255,255,0.6);
+    font-size: 18px;
+    font-family: "Roboto", "Helvetica", "Arial", sans-serif!important;
+    font-weight: 300;
+}
+
+
+/*--------------------
+  Placeholder
+---------------------*/
+
+
+.ui.form ::-webkit-input-placeholder { /* WebKit browsers */
+    color:rgba(0, 0, 0, 0.8);
+    font-size: 18px;
+    font-family: "Roboto", "Helvetica", "Arial", sans-serif!important;
+    font-weight: 300;
+    padding-left: 5px;
+}
+.ui.form :-moz-placeholder { /* Mozilla Firefox 4 to 18 */
+    color:rgba(0, 0, 0, 0.8);
+    font-size: 18px;
+    font-family: "Roboto", "Helvetica", "Arial", sans-serif!important;
+    font-weight: 300;
+    padding-left: 5px;
+}
+.ui.form ::-moz-placeholder { /* Mozilla Firefox 19+ */
+    color:rgba(0, 0, 0, 0.8);
+    font-size: 18px;
+    font-family: "Roboto", "Helvetica", "Arial", sans-serif!important;
+    font-weight: 300;
+    padding-left: 5px;
+}
+.ui.form :-ms-input-placeholder { /* Internet Explorer 10+ */
+    color:rgba(0, 0, 0, 0.8);
+    font-size: 18px;
+     font-family: "Roboto", "Helvetica", "Arial", sans-serif!important;
+    font-weight: 300;
+    padding-left: 5px;
+}
+
+
+
+.ui.form :focus::-webkit-input-placeholder { /* WebKit browsers */
+    color:rgba(0, 0, 0, 0.2);
+}
+.ui.form :focus:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
+    color:rgba(0, 0, 0, 0.2);
+}
+.ui.form :focus::-moz-placeholder { /* Mozilla Firefox 19+ */
+    color:rgba(0, 0, 0, 0.2);
+}
+.ui.form :focus:-ms-input-placeholder { /* Internet Explorer 10+ */
+    color:rgba(0, 0, 0, 0.2);
 }
 
 
@@ -276,7 +402,50 @@ body{
 
 
 
+/*
+================
+Responsive
+================
+*/
 
+
+    @media(min-width: 320px){
+
+    }
+
+    @media(min-width: 768px){
+        .chat{
+            padding-left: 58px;
+        }
+        .chat-box{
+            margin: 5px;
+        }
+    }
+
+    @media(min-width: 1221px){
+        .chat{
+            padding-left: 0px;
+        }
+        .chat-box{
+            margin: 5px 5px 5px 12px;
+        }
+    }
+
+    @media(min-width: 1617px){
+
+    }
+
+
+
+
+
+
+
+    /*Retina*/
+    @media only screen and (min--moz-device-pixel-ratio: 2), only screen and (-o-min-device-pixel-ratio: 2/1), only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min-device-pixel-ratio: 2) {
+
+
+    }
 
 
 
