--- a/perber/views/themes/default/layout.jade
+++ b/perber/views/themes/default/layout.jade
@@ -23,13 +23,16 @@ html(class="no-js", lang="en")
         link(rel="stylesheet", href="/css/semantic.min.css")
         link(rel="stylesheet", href="/css/font-awesome.min.css")
         link(rel="stylesheet", href="/css/perber.css")
-        link(href='http://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900',rel='stylesheet',type='text/css')
-        //link(href='http://fonts.googleapis.com/css?family=Nova+Script|Monoton|Baumans|Roboto:300,100,100italic,300italic,400,400italic,500,500italic,700,700italic,900,900italic|Raleway:400,200,900,800,700,600,500,300,100',rel='stylesheet',type='text/css')
+        link(href='http://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900', rel='stylesheet', type='text/css')
 
         script(type="text/javascript",src="/js/libs/jquery-2.0.3.min.js")
         script(type="text/javascript",src="/js/libs/modernizr-2.5.3.min.js")
         script(type="text/javascript",src="/js/libs/jquery.timeago.js")
         script(type="text/javascript",src="/js/libs/retina.js")
+
+        script(type='text/javascript').
+             !function(r,e,a,c,t){r.GoogleAnalyticsObject=a,r[a]||(r[a]=function(){(r[a].q=r[a].q||[]).push(arguments)}),r[a].l=1*new Date(),c=e.createElement("script"),t=e.scripts[0],c.src="//www.google-analytics.com/analytics.js",t.parentNode.insertBefore(c,t)}(window,document,"ga"),ga("create","UA-44986847-1", "perber.com"),ga("send","pageview");
+
 
     - var body_class = (("undefined" != typeof room) ? 'fancy-theme' : 'home-page')
     body(class=body_class)
