improve masonry.add language decide.

--- a/perber/views/themes/default/room.jade
+++ b/perber/views/themes/default/room.jade
@@ -12,9 +12,8 @@ block content
             .chat-list
                 .chat
 
-                    .current
-
-                    .history
+                    //.current
+                    //.history
 
 
 
