--- a/perber/views/themes/default/room.jade
+++ b/perber/views/themes/default/room.jade
@@ -10,6 +10,9 @@ block content
                         textarea(placeholder="Say somthing")
 
             .chat-list
+                // .loading
+                //     i.fa.fa-spinner.fa-spin
+
                 .chat
 
                     //.current
