--- a/perber/views/themes/default/templates/chat_tmpl.jade
+++ b/perber/views/themes/default/templates/chat_tmpl.jade
@@ -20,14 +20,13 @@ script#people_box(type='text/html')
 
 
 
-script#loading(type="text/html")
-    .loading
-        i.fa.fa-spinner.fa-spin
+// script#loading(type="text/html")
+//    .loading
+//        i.fa.fa-spinner.fa-spin
 
-script#nullbox(type="text/html")
-    .nullbox.header.ui.icon
-        i.inbox.circular.icon
-        |这里还是空的
+// script#nullbox(type="text/html")
+//     .nullbox.header.ui.icon
+//         i.circular.icon 这里还是空的
 
 
 
