--- a/perber/views/themes/default/room.jade
+++ b/perber/views/themes/default/room.jade
@@ -1,6 +1,10 @@
 extends layout
 
 block content
+    audio(id="chatAudio")
+        source(src="/audio/notify.ogg", type="audio/ogg")
+        source(src="/audio/notify.mp3", type="audio/mpeg")
+        source(src="/audio/notify.wav", type="audio/wav")
     .wrap
         .content(role='main')
 
