--- a/perber/views/themes/default/templates/chat_tmpl.jade
+++ b/perber/views/themes/default/templates/chat_tmpl.jade
@@ -1,5 +1,5 @@
 script#chat_box(type='text/html')
-  .chat-box
+  .chat-box(data-id='999')
     {{> chat_box_text }}
 
 script#chat_box_text(type='text/html')
