--- a/perber/views/themes/default/room.jade
+++ b/perber/views/themes/default/room.jade
@@ -5,6 +5,10 @@ block content
         source(src="/audio/notify.ogg", type="audio/ogg")
         source(src="/audio/notify.mp3", type="audio/mpeg")
         source(src="/audio/notify.wav", type="audio/wav")
+    audio(id="deletedAudio")
+        source(src="/audio/del.ogg", type="audio/ogg")
+        source(src="/audio/del.mp3", type="audio/mpeg")
+        source(src="/audio/del.wav", type="audio/wav")
     .wrap
         .content(role='main')
 
