--- a/perber/views/themes/default/room.jade
+++ b/perber/views/themes/default/room.jade
@@ -30,6 +30,11 @@ block content
 
     include templates/chat_tmpl
 
+    script(type="text/javascript",src="/js/libs/jquery.timeago.js")
+    // script(type="text/javascript",src="/js/libs/retina.js")
+    script(type="text/javascript",src="/js/libs/hammer.min.js")
+    script(type="text/javascript",src="/js/libs/jquery.hammer.min.js")
+
     script(defer, src="/js/plugins.js")
     script(defer, src="/js/libs/ICanHaz.min.js")
     script(src="/socket.io/socket.io.js")
