--- a/perber/views/themes/default/templates/chat_tmpl.jade
+++ b/perber/views/themes/default/templates/chat_tmpl.jade
@@ -29,6 +29,14 @@ script#nullbox(type="text/html")
         i.circular.icon.circle
         空
 
+script#progress(type="text/html")
+    .progressWrapper
+        .progress
+
+script#confirm_template(type='text/html')
+    .confirm
+        i(class='fa fa-times-circle delete', title='删除')
+        i(class='fa fa-minus-circle cancel', title='取消')
 
 
 script#title_template(type='text/html')
