--- a/perber/public/css/perber.css
+++ b/perber/public/css/perber.css
@@ -293,9 +293,6 @@ body{
     min-width: 150px;
     max-width: 310px;
     width: 300px;
-    background: #fff;
-    border-radius: 5px;
-    padding: 20px 30px;
     margin: 5px 5px 5px 10px;
     vertical-align: top;
     font-size: 24px;
@@ -307,6 +304,13 @@ body{
     box-sizing:border-box;
 }
 
+.chat-box p{
+    padding: 20px 30px;
+    background: #fff;
+    border-radius: 5px;
+    overflow: hidden;
+}
+
 .chat-box p.cn{
     font-size: 14px;
 }
@@ -315,14 +319,223 @@ body{
     display: block;
     text-align: right;
     color: #bbb;
+    padding-top: 5px;
     font-size: 10px;
 }
 
 
-.chat .history .chat-box{
-    /*opacity: 0;*/
+/*waiting for delete*/
+.chat-box.waiting{
+    -webkit-animation-name:scaleBox;
+    -webkit-animation-duration:0.4s;
+    -webkit-animation-timing-function: ease-in-out;
+    -webkit-animation-iteration-count:1;
+
+    -moz-animation-name:scaleBox;
+    -moz-animation-duration:0.4s;
+    -moz-animation-timing-function: ease-in-out;
+    -moz-animation-iteration-count:1;
 }
 
+.chat-box.waiting p{
+    background-color: rgba(255,255,255,0.7);
+}
+
+.chat-box .confirm{
+    position: absolute;
+    right: 0;
+    top: 0;
+}
+.chat-box.waiting .confirm{
+    -webkit-animation-name:scaleConfirmBox;
+    -webkit-animation-duration:0.2s;
+    -webkit-animation-timing-function: ease-in-out;
+    -webkit-animation-iteration-count:1;
+
+    -moz-animation-name:scaleConfirmBox;
+    -moz-animation-duration:0.2s;
+    -moz-animation-timing-function: ease-in-out;
+    -moz-animation-iteration-count:1;
+}
+
+/* keyframes scaleBox for .chat-box animate */
+@-webkit-keyframes scaleBox{
+    0%{
+        -webkit-transform:scale(1);
+    }
+    50%{
+        -webkit-transform:scale(1.05);
+    }
+    100%{
+        -webkit-transform:scale(1);
+    }
+}
+@-moz-keyframes scaleBox{
+    0%{
+        -moz-transform:scale(1);
+    }
+    50%{
+        -moz-transform:scale(1.05);
+    }
+    100%{
+        -moz-transform:scale(1);
+    }
+}
+
+/* keyframes scaleConfirmBox for .confirm animate */
+@-webkit-keyframes scaleConfirmBox{
+    0%{
+        -webkit-transform:scale(0.1);
+        opacity: 0;
+    }
+    100%{
+        -webkit-transform:scale(1);
+        opacity: 1;
+    }
+}
+@-moz-keyframes scaleConfirmBox{
+    0%{
+        -moz-transform:scale(0.1);
+        opacity: 0;
+    }
+    100%{
+        -moz-transform:scale(1);
+        opacity: 1;
+    }
+}
+
+.chat-box .confirm i{
+    margin-right: 4px;
+    opacity: 0;
+    cursor: pointer;
+
+    transition:all 0.3s ease;
+}
+.chat-box.waiting .confirm i{
+    opacity: 0.7;
+    -moz-transform:scale(0.8);
+    -webkit-transform:scale(0.8);
+    transform:scale(0.8);
+}
+.chat-box.waiting .confirm i:hover{
+    -moz-transform:scale(1);
+    -webkit-transform:scale(1);
+    transform:scale(1);
+}
+
+.delete{
+    color: #c00;
+}
+.cancel{
+    color: #555;
+}
+
+.chat-box.animate p{
+    -webkit-animation-name:rotateLeft;
+    -webkit-animation-duration:0.25s;
+    -webkit-animation-timing-function: ease-in-out;
+    -webkit-animation-iteration-count:infinite;
+
+    -moz-animation-name:rotateLeft;
+    -moz-animation-duration:0.25s;
+    -moz-animation-timing-function: ease-in-out;
+    -moz-animation-iteration-count:infinite;
+}
+
+@-webkit-keyframes rotateLeft{
+    0%{
+        -webkit-transform:rotate(0);
+        margin-left: -1px;
+        margin-top:-1px;
+    }
+    25%{
+        -webkit-transform:rotate(-0.6deg);
+        margin-left: 0px;
+        margin-top:0px;
+    }
+    50%{
+        -webkit-transform:rotate(0deg);
+        margin-left: 1px;
+        margin-top:1px;
+    }
+    75%{
+        -webkit-transform:rotate(0.6deg);
+        margin-left: 0px;
+        margin-top:0px;
+    }
+    100%{
+        -webkit-transform:rotate(0deg);
+        margin-left: -1px;
+        margin-top:-1px;
+    }
+}
+@-moz-keyframes rotateLeft{
+    0%{
+        -moz-transform:rotate(0);
+        margin-left: -1px;
+        margin-top:-1px;
+    }
+    25%{
+        -moz-transform:rotate(-0.6deg);
+        margin-left: 0px;
+        margin-top:0px;
+    }
+    50%{
+        -moz-transform:rotate(0deg);
+        margin-left: 1px;
+        margin-top:1px;
+    }
+    75%{
+        -moz-transform:rotate(0.6deg);
+        margin-left: 0px;
+        margin-top:0px;
+    }
+    100%{
+        -moz-transform:rotate(0deg);
+        margin-left: -1px;
+        margin-top:-1px;
+    }
+}
+
+
+.progressWrapper{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 5px;
+    border-radius: 0 0 5px 5px;
+    overflow: hidden;
+}
+.progressWrapper .progress{
+    width: 0%;
+    height: 5px;
+    background: #c00;
+    opacity: 0.8;
+    position: absolute;
+    -moz-animation: fullexpand 10s 1 ease-out;
+    -webkit-animation: fullexpand 10s 1 ease-out;
+    -o-animation: fullexpand 10s 1 ease-out;
+}
+
+/* Full Width Animation Bar */
+@-moz-keyframes fullexpand {
+    0%{
+        width:0%;
+    }
+    100%{
+        width: 100%;
+    }
+}
+
+@-webkit-keyframes fullexpand {
+    0%{
+        width:0%;
+    }
+    100%{
+        width: 100%;
+    }
+}
 
 
 
