--- a/perber/public/css/perber.css
+++ b/perber/public/css/perber.css
@@ -305,7 +305,7 @@ body{
 }
 
 .chat-box p{
-    padding: 20px 30px;
+    padding: 20px 20px 15px 20px;
     background: #fff;
     border-radius: 5px;
     overflow: hidden;
@@ -313,6 +313,14 @@ body{
 
 .chat-box p.cn{
     font-size: 14px;
+}
+
+.imgbox{
+    position: relative;
+    min-height: 200px;
+    margin-bottom: 5px;
+    line-height: 100%;
+    text-align: center;
 }
 
 .chat-box .time{
