--- a/perber/public/css/perber.css
+++ b/perber/public/css/perber.css
@@ -318,9 +318,10 @@ body{
 .imgbox{
     position: relative;
     height: 300px;
-    margin-bottom: 5px;
+    margin: -20px -20px 15px -20px;
     line-height: 300px;
     text-align: center;
+    font-size: 0;
 }
 
 .imgbox img{
