--- a/perber/views/themes/default/room.jade
+++ b/perber/views/themes/default/room.jade
@@ -15,7 +15,7 @@ block content
             .chat-input
                 .ui.form
                     .field
-                        textarea(placeholder="Say somthing")
+                        textarea(placeholder="Say something")
 
             .chat-list
                 // .loading
